--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/orig/myLibreNMS"]
-	path = src/orig/myLibreNMS
-	url = https://github.com/librenms/myLibreNMS
+[submodule "src/orig/iNMS"]
+	path = src/orig/iNMS
+	url = https://github.com/librenms/iNMS
