--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Specifies intentionally untracked files to ignore when using Git
 # http://git-scm.com/docs/gitignore
 
+# Preserve original src/docs files\
+docs/orig/
+src/orig/
+
 *~
 *.sw[mnpcod]
 *.log
