Updated config files

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "MyLibreNMS",
+    "name": "iNMS",
     "author": "Stephen Davis",
     "homepage": "http://ionicframework.com/",
     "private": true,
@@ -10,52 +10,52 @@
         "ionic:serve": "ionic-app-scripts serve"
     },
     "dependencies": {
-        "@angular/common": "5.0.0",
-        "@angular/compiler": "5.0.0",
-        "@angular/compiler-cli": "5.0.0",
-        "@angular/core": "5.0.0",
-        "@angular/forms": "5.0.0",
-        "@angular/http": "5.0.0",
-        "@angular/platform-browser": "5.0.0",
-        "@angular/platform-browser-dynamic": "5.0.0",
-        "@ionic-native/barcode-scanner": "^3.12.1",
-        "@ionic-native/core": "3.10.2",
-        "@ionic-native/http": "^4.6.0",
-        "@ionic-native/globalization": "^4.7.0",
-        "@ionic-native/screen-orientation": "^3.12.1",
-        "@ionic-native/splash-screen": "3.10.2",
-        "@ionic-native/status-bar": "3.10.2",
-        "@ionic/storage": "2.1.3",
-        "@ngx-translate/core": "^8.0.0",
-        "@ngx-translate/http-loader": "^2.0.0",
-        "cordova-android": "^6.2.3",
-        "cordova-ios": "^4.5.4",
+        "@angular/common": "14.0.2",
+        "@angular/compiler": "14.0.2",
+        "@angular/compiler-cli": "14.0.2",
+        "@angular/core": "14.0.2",
+        "@angular/forms": "14.0.2",
+        "@angular/http": "7.2.16",
+        "@angular/platform-browser": "14.0.2",
+        "@angular/platform-browser-dynamic": "14.0.2",
+        "@ionic-native/barcode-scanner": "^5.36.0",
+        "@ionic-native/core": "5.36.0",
+        "@ionic-native/http": "^5.36.0",
+        "@ionic-native/globalization": "^5.36.0",
+        "@ionic-native/screen-orientation": "^5.36.0",
+        "@ionic-native/splash-screen": "5.36.0",
+        "@ionic-native/status-bar": "5.36.0",
+        "@ionic/storage": "3.0.6",
+        "@ngx-translate/core": "^14.0.0",
+        "@ngx-translate/http-loader": "^7.0.0",
+        "cordova-android": "^10.1.2",
+        "cordova-ios": "^6.2.0",
         "cordova-plugin-compat": "^1.2.0",
-        "cordova-plugin-console": "^1.0.7",
-        "cordova-plugin-device": "^1.1.6",
+        "cordova-plugin-console": "^1.1.0",
+        "cordova-plugin-device": "^2.1.0",
         "cordova-plugin-globalization": "^1.11.0",
-        "cordova-plugin-inappbrowser": "^1.7.1",
-        "cordova-plugin-ionic": "^3.1.3",
-        "cordova-plugin-ionic-webview": "^1.1.16",
-        "cordova-plugin-screen-orientation": "^1.4.3",
-        "cordova-plugin-splashscreen": "^5.0.2",
-        "cordova-plugin-statusbar": "^2.2.3",
-        "cordova-plugin-whitelist": "^1.3.2",
-        "cordova-sqlite-storage": "^2.0.4",
-        "ionic-angular": "^3.9.2",
+        "cordova-plugin-inappbrowser": "^5.0.0",
+        "cordova-plugin-ionic": "^5.5.2",
+        "cordova-plugin-ionic-webview": "^5.0.0",
+        "cordova-plugin-screen-orientation": "^3.0.2",
+        "cordova-plugin-splashscreen": "^6.0.1",
+        "cordova-plugin-statusbar": "^3.0.0",
+        "cordova-plugin-whitelist": "^1.3.5",
+        "cordova-sqlite-storage": "^6.0.0",
+        "ionic-angular": "^3.9.10",
         "ionic-img-viewer": "^2.9.0",
-        "ionic-native-http-connection-backend": "^4.0.5",
+        "ionic-native-http-connection-backend": "^10.0.0",
         "ionic-plugin-keyboard": "^2.2.1",
-        "ionicons": "3.0.0",
-        "phonegap-plugin-barcodescanner": "^6.0.8",
-        "rxjs": "5.5.2",
+        "ionicons": "6.0.2",
+        "phonegap-plugin-barcodescanner": "^8.1.0",
+        "rxjs": "7.5.5",
         "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.18"
+        "zone.js": "0.11.6"
     },
     "devDependencies": {
-        "@ionic/app-scripts": "3.1.7",
-        "ionic": "3.20.0",
-        "typescript": "2.4.2"
+        "@ionic/app-scripts": "3.2.4",
+        "ionic": "5.4.16",
+        "typescript": "4.7.4"
     },
     "description": "MyLibreNMS: A LibreNMS utility app",
     "cordovaPlugins": [
@@ -101,7 +101,7 @@
             "cordova-plugin-globalization": {},
             "cordova-plugin-advanced-http": {},
             "cordova-plugin-ionic": {
-                "APP_ID": "2a038c89",
+                "APP_ID": "2ef01446",
                 "CHANNEL_NAME": "Production",
                 "UPDATE_METHOD": "background",
                 "WARN_DEBUG": "true",
