--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,8 +1,8 @@
 {
-    "name": "iNMS",
-    "app_id": "",
-    "integrations": {
-        "cordova": {}
-    },
-    "type": "ionic-angular"
+  "name": "iNMS",
+  "app_id": "",
+  "integrations": {
+    "capacitor": {}
+  },
+  "type": "angular"
 }
