--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,9 @@
       "es2015"
     ],
     "module": "es2015",
-    "moduleResolution": "node",
+    "moduleResolution": "nodenext",
     "sourceMap": true,
-    "target": "es5"
+    "target": "es2015"
   },
   "include": [
     "src/**/*.ts"
