--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
         "cordova-plugin-splashscreen": "^6.0.1",
         "cordova-plugin-statusbar": "^3.0.0",
         "cordova-sqlite-storage": "^6.0.0",
-        "@ionic/angular": "6.1.10",
+        "ionic-angular": "3.9.10",
         "ionic-img-viewer": "^2.9.0",
         "ionic-native-http-connection-backend": "^10.0.0",
         "ionic-plugin-keyboard": "^2.2.1",
